K8S/06-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carsales-ingress
  namespace: carsales-ns
  annotations:
    spec.ingressClassName: "gce"
    cloud.google.com/neg: '{"ingress": true}'
spec:
  rules:
    - host:
      http:
        paths:
          - path: /swagger-ui/index.html
            pathType: Prefix
            backend:
              service:
                name: carsales-app-service
                port:
                  number: 8080
